--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,10 @@
   font-size: 25px;
   color: #434851;
   padding-bottom: 15px;
+
 }
+
+
 
 .container-unorder-list {
   background-color: white;
@@ -70,6 +73,24 @@
   border-radius: 6px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.unorder-list li {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.cancel {
+  display: inline-block;
+  font-size: 1rem;
+  width: 20px;
+  aspect-ratio: 1;
+  border: 1px solid black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .unorder-list li .button-unorder-list-state {
