--- a/without-vue-js/css/style.css
+++ b/without-vue-js/css/style.css
@@ -66,10 +66,33 @@
 
 .container-unorder-list {
   background-color: white;
-  padding: 5px 30px;
   border-radius: 6px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.unorder-list li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+}
+
+.unorder-list li span:first-child {
+  flex-grow: 1;
+  padding: 5px 0 10px;
+}
+
+.cancel {
+  font-size: 1rem;
+  display: inline-block;
+  width: 20px;
+  aspect-ratio: 1;
+  border: 1px solid black;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .unorder-list li .button-unorder-list-state {
